# muslimtify

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURES.md  INSTALL.md  PACKAGING.md  QUICKSTART.md  README.md  bump-version.sh  install.ps1  install.sh  test_notification.ps1  test_notification.sh  uninstall.ps1  uninstall.sh
.copr/: Makefile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.packages/: README.md  check-versions.sh  refresh-aur-hash.sh
.packages/aur/: .SRCINFO  .gitignore  PKGBUILD  muslimtify.install
.packages/debian/: .gitignore  build.sh  launchpad.txt  upload-ppa.sh
.packages/debian/debian/: changelog  control  copyright  postinst  rules
.packages/fedora/: build.sh  create-copr.sh  muslimtify.spec  upload-copr.sh
.packages/winget/: muslimtify.iss
docs/: INTERNATIONAL_METHODS.md  KEMENAG_METHOD.md  METHOD_TOLERANCES.md
docs/reviews/: 2026-05-25-gui-restructure-review.md  2026-05-25-location-country-flag-review.md
docs/specs/: 2026-05-25-gui-restructure-design.md  2026-05-25-location-country-flag-design.md  2026-05-25-unified-config-auto-design.md
docs/superpowers/plans/: 2026-03-22-json-cleanup.md  2026-03-22-prayer-cache.md  2026-03-22-windows-notification.md  2026-03-22-windows-port.md  2026-03-23-config-module-refactor.md  2026-03-23-json-slice-arena-fixes.md  2026-03-23-json-task1-review.md  2026-03-23-msvc-warning-cleanup-plan.md  2026-03-23-msvc-warning-cleanup-task2.md  2026-03-23-multiplatform-boundary-hardening.md  2026-03-24-readme-rewrite.md  2026-03-24-windows-install-path.md  2026-03-24-windows-install-script.md  2026-03-24-windows-path-symmetry.md  2026-03-24-windows-service-helper.md  2026-03-24-windows-toast-icon.md  2026-03-24-windows-toast-test-script.md  2026-03-24-windows-uninstall-script.md
docs/superpowers/specs/: 2026-03-22-libjson-cleanup-design.md  2026-03-22-windows-notification-design.md  2026-03-22-windows-port-design.md  2026-03-23-msvc-warning-cleanup-design.md  2026-03-23-multiplatform-boundary-design.md  2026-03-24-readme-rewrite-design.md  2026-03-24-windows-install-path-design.md  2026-03-24-windows-install-script-design.md  2026-03-24-windows-path-symmetry-design.md  2026-03-24-windows-service-helper-design.md  2026-03-24-windows-toast-icon-design.md  2026-03-24-windows-toast-test-script-design.md  2026-03-24-windows-uninstall-script-design.md
docs/verifications/: 2026-05-25-gui-restructure-verify.md  2026-05-25-location-country-flag-verify.md  2026-05-25-unified-config-auto-verify.md
include/: cache.h  check_cycle.h  cli.h  cli_internal.h  config.h  country.h  daemon_loop.h  display.h  location.h  notification.h  platform.h  prayer_checker.h  prayer_helper.h  prayertimes.h
src/: cache.c  check_cycle.c  cli.c  cmd_config.c  cmd_daemon.c  cmd_daemon.h  cmd_daemon_win.c  cmd_daemon_win.h  cmd_location.c  cmd_method.c  cmd_next.c  cmd_notification.c  cmd_prayer.c  cmd_show.c  cmd_sound.c  config.c  display.c  json.h  libjson.h  location.c  method_detect.h  muslimtify.c  muslimtify_gui.c  muslimtify_service_win.c  notification.c  notification_win.c  platform_linux.c  platform_win.c  prayer_checker.c  prayertimes.h  string_util.c  string_util.h  version.h.in
src/cli/: cli.c  cmd_config.c  cmd_daemon.c  cmd_daemon_win.c  cmd_location.c  cmd_next.c  cmd_notification.c  cmd_show.c  cmd_sound.c
src/core/: config.c  country.c  daemon_loop.c  display.c  location.c  prayer_helper.c
src/gui/: CMakeLists.txt
src/gui/app/: app.c  app.h  assets.c  assets.h
src/gui/components/: calculation_profile_card.c  calculation_profile_card.h  daily_schedule.c  daily_schedule.h  dashboard_content.c  dashboard_content.h  navigation.c  navigation.h  prayer_card.c  prayer_card.h  topbar.c  topbar.h
src/gui/components/dashboard/: daily_schedule.c  dashboard_content.c  prayer_card.c
src/gui/components/settings/: prayer_setting.c  prayer_setting.h
src/gui/resources/shaders/: space.fs
src/gui/themes/: app_assets.h  asset_paths.h  assets.h  colors.h
src/gui/utils/: gui_prayer.c  gui_prayer.h
src/platform/linux/: timezone.c
src/platform/windows/: notification_win.c  timezone.c
systemd/: muslimtify.service  muslimtify.service.in  muslimtify.timer
tests/: reference_prayer_times.csv  test_cache.c  test_cli.c  test_cmd_daemon.c  test_cmd_daemon_win.c  test_config.c  test_country.c  test_daemon_loop.c  test_json.c  test_location.c  test_method_detect.c  test_notification_win.c  test_platform.c  test_prayer_checker.c  test_prayer_helper.c  test_prayertimes.c  test_string_util.c
